--- a/gestion/templates/resource.html
+++ b/gestion/templates/resource.html
@@ -19,7 +19,7 @@
             <div class="card-deck">
                 <div class="row">
                 {% for item in resources %}
-                    <div class="col col-md-6 mb-3">
+                    <div class="col-12 col-lg-4 col-md-6 mb-3">
                     <div class="card">
                         <div class="card-header softer_accent" id="heading_{{item.order}}">
                             <button class="btn btn-link font-weight-bold" data-toggle="collapse" data-target="#collapse_{{item.order}}"
