Literally added tons of stuff

--- a/gestion/templates/main.html
+++ b/gestion/templates/main.html
@@ -51,10 +51,18 @@
                 <img src="{% static 'main/ucompetencia.png'%}" class="img-fluid text-center my-auto" alt="Responsive image">
             </div>
             <div class="pr-3 pt-2 col-sm">
-                <h1 class="pb-4">Unidad de competencia</h1>
+                <h2 class="pb-4">Unidad de competencia</h2>
                 <p>
                     En ésta unidad se busca que los estudiantes gestionen organizaciones de innovación
                     tecnol&oacute;gica con base en competencias gerenciales.
+                </p>
+                <h2 class="pb-4">Propósito de la unidad de aprendizaje</h2>
+                <p>
+                    Gestiona organizaciones de innovación tecnológica con base en competencias gerenciales.
+                </p>
+                <h2 class="pb-4">Intención educativa</h2>
+                <p>
+                    La unidad de aprendizaje contribuye al perfil de egreso del ingeniero en sistemas computacionales desarrollando las competencias directivas de liderazgo, toma de decisiones bajo condiciones de riesgo e incertidumbre, manejo de grupos de trabajo, capacidad de negociación, manejo de conflictos, orientación al cambio y a la innovación permanente, para gestionar organizaciones con una actitud emprendedora, ética y de responsabilidad social.
                 </p>
             </div>
         </div>
@@ -96,7 +104,7 @@
                     Project Manager en IPN <br/>
                 </p>
                 <p class="pt-3">
-                    Áreas de interes: Administración de Proyectos PMI, Gobernanza IT, Seguridad de la Información, Desarrollo de aplicaciones.  <br/>
+                    Áreas de interés: Administración de Proyectos PMI, Gobernanza IT, Seguridad de la Información, Desarrollo de aplicaciones.  <br/>
                 </p>
             </div>
             <div class="col-sm justify-content-center text-center">
@@ -109,7 +117,7 @@
                     Mtra. ESCA Sto. Tomas IPN 
                 </p>
                 <p class="pt-3">
-                    Áreas de interés: Gestión Empresarial, Desarrollo de Proyectos, Educación mejora continua, Emprendimiento. 
+                    Áreas de interés: Gestión Empresarial, Desarrollo de Proyectos, Educación, mejora continua, Emprendimiento. 
                 </p>
                 
             </div>
