--- a/gestion/templates/base.html
+++ b/gestion/templates/base.html
@@ -28,13 +28,17 @@
                     <li class="nav-item text-uppercase {% if url_name == 'main' %}active font-weight-bold{% endif %}">
                         <a class="nav-link" href="{% url 'main' %}">Inicio</a>
                     </li>
-                    <li class="nav-item text-uppercase dropdown {% if url_name == 'resource' %}active font-weight-bold{% endif %}">
+                    <li class="nav-item text-uppercase dropdown {% if url_name in 'resource,globalresources' %}active font-weight-bold{% endif %}">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Recursos
                         </a>
+                        <!-- <a class="dropdown-item" href="#">Separated link</a> -->
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <!-- <a class="dropdown-item {% if url_name == 'resource'%}{% if this_unit.name == unit.name %}font-weight-bold{% endif %}{% endif %}" href="{% url 'globalresources'  %}">{{unit.order}}: {{unit.name | truncatechars:40}}</a> -->
+                            <a class="dropdown-item {% if url_name == 'globalresources' %}  font-weight-bold{% endif %}" href="{% url 'globalresources'%}"> Recursos generales </a>
+                            <div class="dropdown-divider"></div>
                             {% for unit in units %} 
-                                <a class="dropdown-item {% if url_name == 'resource'%}{% if this_unit.name == unit.name %}font-weight-bold{% endif %}{% endif %}" href="{% url 'resource' unit.order %}">{{unit.order}}: {{unit.name | truncatechars:40}}</a>
+                            <a class="dropdown-item {% if url_name == 'resource'%}{% if this_unit.name == unit.name %}font-weight-bold{% endif %}{% endif %}" href="{% url 'resource' unit.order %}">{{unit.order}}: {{unit.name | truncatechars:40}}</a>
                             {% endfor %}
                         </div>
                     </li>
