Big commit; see details
- Added assesment and activity models
- Updated templates to show data from these models
- Updated settings.py to allow loading files from the same domain
- Some fixes here and there

--- a/gestion/templates/main.html
+++ b/gestion/templates/main.html
@@ -4,15 +4,15 @@
 <div class="container-fluid" style="padding-top: 10px;">
     <div class="d-flex row p-5 text-white bg-info" id="bienvenida" style="align-items: center;">
         <div class="p-3 col-sm">
-            <h1 class="pb-4">Bienvenidos</h1>
+            <h1 class="pb-4">Bienvenida</h1>
             <p class="pt-1">
-                Estimados estudiantes, se les extiende la más cordial bienvenida a este espacio,
+                Estimados y estimadas estudiantes, se les extiende la más cordial bienvenida a este espacio,
                 donde podrán encontrar información relevante a la unidad de aprendizaje conocida como Gestión
-                Empresarial. <br /><br />
+                Empresarial correspondiente al plan de estudios 2020. <br /><br />
 
                 Podrán consultar los contenidos de cada unidad en sus respectivas secciones en la barra de navegación
                 que se encuentra en la parte superior. Haga scroll hacia abajo para ver los puntos clave que conforman
-                esta unidad.
+                esta unidad de aprendizaje.
             </p>
         </div>
     </div>
@@ -25,7 +25,7 @@
             <div class="p-3 col-sm">
                 <h1 class="pb-4">Metodolog&iacute;a</h1>
                 <p class="pt-1">
-                    La unidad 2 se abordará a partir de la estrategia de aprendizaje orientada a proyectos y método
+                    Se abordará a partir de la estrategia de aprendizaje orientada a proyectos y método
                     deductivo e inductivo, lo cual permitirá la utilización de las siguientes técnicas de aprendizaje:
                 </p>
                 <ul>
@@ -53,7 +53,7 @@
             <div class="pr-3 pt-2 col-sm">
                 <h2 class="pb-4">Unidad de competencia</h2>
                 <p>
-                    En ésta unidad se busca que los estudiantes gestionen organizaciones de innovación
+                    Se busca que los estudiantes gestionen organizaciones de innovación
                     tecnol&oacute;gica con base en competencias gerenciales.
                 </p>
                 <h2 class="pb-4">Propósito de la unidad de aprendizaje</h2>
@@ -112,7 +112,7 @@
                 <img src="{% static 'main/veronica.png'%}" width="200" class="img-fluid" alt="">
                 <p class="pt-3">
                     ESCOM-IPN  Depto. de ISC profesora titular desde 2009. <br/>
-                    vaguistin@ipn.mx <br/>
+                    vagustin@ipn.mx <br/>
                     Ext. 52032 <br/>
                     Mtra. ESCA Sto. Tomas IPN 
                 </p>
