--- a/gestion/templates/globalresources.html
+++ b/gestion/templates/globalresources.html
@@ -3,13 +3,13 @@
 {% load static %}
 	<div style="padding-top: 10px;">
         <div class="text-white text-center mx-auto p-2 bg-gradient border border-dark" style="background-color: black;">
-			<h2 style="margin-bottom: 0"> Recursos generales</h2>
+			<h2 style="margin-bottom: 0"> Recursos generales de la unidad de aprendizaje</h2>
         </div>
 
         <div class="col col-md-11 p-3 mx-auto">
 
             <div class="bg-light p-4 rounded border border_acccent soft_accent">
-                <h2>Recursos generales de la materia</h2>
+                <h2>Recursos generales de la unidad de aprendizaje</h2>
             </div>
             <div class="p-4">
                 <h6>Aquí encontrarás las fuentes de consulta y glosario para todos los temas de la materia.</h6>
@@ -71,6 +71,7 @@
                                 {% endfor %}
                             </div>
                         </div>
+                        <!-- Content sub-section (infoResource) end-->
                     </div>
                 </div>
             </div>
